Showing user status

--- a/client/main.html
+++ b/client/main.html
@@ -3,9 +3,7 @@
 </head>
 <body>
   <div id="header">
-    <div id="status">
-      status
-    </div>
+    {{> layoutHeader}}
     <a id="logo"></a>
   </div>
   <div id="content">
