--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,7 @@
 <body>
   <div id="header">
     {{> layoutHeader}}
-    <a id="logo"></a>
+    <a href='/' id="logo"></a>
   </div>
   <div id="content">
     {{> flash}}
