--- a/client/main.html
+++ b/client/main.html
@@ -7,6 +7,10 @@
     <a href='/' id="logo"></a>
   </div>
   <div id="content">
+    <div>
+      <a href="{{userListPath}}">Ludia</a>
+      <a href="{{messagesListPath}}">Chat</a>
+    </div>
     {{> flash}}
     {{renderPage}}
   </div>
